Updates and adding favicon
Trying to get different background effects to work but the camo and frost effect will not.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Author Page</title>
+  <title>Trevor Belt | Fiction Author | Suspense, Fantasy & More</title>
+  <link rel="icon" type="image/png" href="tbfavicon1.png">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
@@ -21,8 +22,9 @@
 
 <!-- HERO SECTION (Tagline only) -->
 <section class="hero">
-  <p>Author of Fiction and Fantasy</p>
+  <h2 class="tagline">Crafting Worlds, One Story at a Time</h2>
 </section>
+
 
 <!-- ABOUT SECTION -->
 <section id="about" class="profile">
@@ -30,7 +32,6 @@
   <div class="bio">
     <h2>About the Author</h2>
     <p>Trevor Belt is an author out of Michigan. He is known for writing cinematic, suspenseful plots weaving captivating storytelling with unforgettable characters. Trevor's aspiration for being a writer stems from his childhood in which he recalls creating many stories that he wished to share with the world.</p>
-    <br>
     <p>Trevor is an avid reader—he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, ... . In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
   </div>
 </section>
@@ -51,13 +52,15 @@
     <div class="book-card">
       <img src="book1.jpg" alt="Book 1">
       <h3>Night Talon</h3>
-      <p>A gripping military tale of survival and betrayal.<br>Enter Svalbard, Norway… an arctic archipelago.</p>
+      <p>A gripping military tale of survival and betrayal.Enter Svalbard, Norway… an arctic archipelago.</p>
+      <p>Upcoming 2026...</p>
     </div>
   </div>
 </section>
 
 <!-- WHAT TO EXPECT SECTION -->
-<section class="expect">
+  <section class="expect">
+    <section class="newsletter arctic">
   <h2>What to Expect in Night Talon</h2>
   <div class="expect-grid">
 
@@ -74,10 +77,12 @@
     </div>
 
   </div>
+  </section>
 </section>
 
 <!-- REVIEWS SECTION -->
 <section class="reviews">
+  <section class="expect arctic-camo">
   <h2>Early Praise for Night Talon</h2>
   <div class="review-grid">
     <!--<div class="review-card">
@@ -85,6 +90,7 @@
       <span>- Early Reader</span>
     </div>-->
   </div>
+  </section>
 </section>
 
 
