Finishing text items
Adding to book description and finishing about biography

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <!-- HERO SECTION (Tagline only) -->
 <section class="hero">
-  <h2 class="tagline">Crafting Worlds, One Story at a Time</h2>
+  <h2 class="tagline">Stay connected with exclusive updates and early looks at what’s coming next.</h2>
+  <h2 class="hero-sub">Thanks for visiting</h2>
 </section>
 
 
@@ -32,7 +33,7 @@
   <div class="bio">
     <h2>About the Author</h2>
     <p>Trevor Belt is an author out of Michigan. He is known for writing cinematic, suspenseful plots weaving captivating storytelling with unforgettable characters. Trevor's aspiration for being a writer stems from his childhood in which he recalls creating many stories that he wished to share with the world.</p>
-    <p>Trevor is an avid reader—he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, ... . In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
+    <p>Trevor is an avid reader—he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, Cormac McCarthy, Drew Karpyshyn, and Francis F.S. Fitzgerald to name a few. In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
   </div>
 </section>
 
@@ -49,6 +50,7 @@
   <input type="email" name="email" id="bd-email" />
   <input type="submit" value="Subscribe" />
 </form>
+  <p class="newsletter-note">Unsubscribe at any time</p>
 </section>
 
 
@@ -59,7 +61,8 @@
     <div class="book-card">
       <img src="book1.jpg" alt="Book 1">
       <h3>Night Talon</h3>
-      <p>A gripping military tale of survival and betrayal.Enter Svalbard, Norway… an arctic archipelago.</p>
+      <p>A gripping military tale of survival and betrayal. Enter Svalbard, Norway, an arctic archipelago swallowed by endless white. Night Talon is tasked with extracting a rogue lab researcher. A simple grab-and-go. Routine. Clean. But when Dark and the rest of Night Talon drop into the blizzard, they discover their “routine” mission is a setup. Their target isn’t alone, he has enlisted a hostile militia who awaits them in the storm, outnumbering Talon three to one. </p>
+      <p>As bullets slice through the whiteout and the blizzard freezes any plans they had, Dark - Talon's sniper, becomes the hunted as he's forced to fight for his life in a frostbitten wasteland.  </p>
       <p>Upcoming 2026...</p>
     </div>
   </div>
@@ -72,15 +75,15 @@
   <div class="expect-grid">
 
     <div class="expect-card">
-      <p>Relentless tension and tactical realism drawn from high‑stakes military operations.</p>
+      <p>Relentless tension and tactical realism inspired by high‑stakes military operations.</p>
     </div>
 
     <div class="expect-card">
-      <p>A chilling Arctic atmosphere where isolation, cold, and betrayal shape every decision.</p>
+      <p>A chilling Arctic atmosphere where the reader feels isolation and cold seep into every page.</p>
     </div>
 
     <div class="expect-card">
-      <p>Characters pushed to their limits as survival, loyalty, and truth collide.</p>
+      <p>A deep dive into the minds of characters who have been pushed to their limits as survival, loyalty, and truth collide.</p>
     </div>
 
   </div>
