--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="bio">
     <h2>About the Author</h2>
     <p>Trevor Belt is an author out of Michigan. He is known for writing cinematic, suspenseful plots weaving captivating storytelling with unforgettable characters. Trevor's aspiration for being a writer stems from his childhood in which he recalls creating many stories that he wished to share with the world.</p>
-    <p>Trevor is an avid reader—he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, Cormac McCarthy, Drew Karpyshyn, and Francis F.S. Fitzgerald to name a few. In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
+    <p>Trevor is an avid reader- he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, Cormac McCarthy, Drew Karpyshyn, and Francis F.S. Fitzgerald to name a few. In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
   </div>
 </section>
 
