--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <img src="author.jpg" alt="Author Photo" class="profile-pic">
   <div class="bio">
     <h2>About the Author</h2>
-    <p>Trevor Belt is an author out of Michigan. He is known for writing cinematic, suspenseful plots weaving captivating storytelling with unforgettable characters. Trevor's aspiration for being a writer stems from his childhood in which he recalls creating many stories that he wished to share with the world.</p>
-    <p>Trevor is an avid reader—he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, Cormac McCarthy, Drew Karpyshyn, and Francis F.S. Fitzgerald to name a few. In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
+    <p>Trevor Belt is an author out of Michigan. He is known for writing cinematic, suspenseful moments weaving captivating storytelling with unforgettable characters. Trevor's aspiration for being a writer stems from his childhood which was filled with imagination and creativity. He has always had a mind for stories, drawn to the freedom of shaping each world he creates.</p>
+    <p>Trevor is an avid reader- he likes to spend his free time diving into classic literature and other works of interest to him. He cites some of his favorite authors to be J.R.R Tolkien, Cormac McCarthy, Drew Karpyshyn, and Francis F.S. Fitzgerald to name a few. In his time outside of literature, Trevor is a computer programmer who enjoys spending his freetime building new programs and applications.</p>
   </div>
 </section>
 
@@ -111,7 +111,7 @@
     </div>
 
     <div class="expect-card">
-      <p>A deep dive into the minds of characters who have been pushed to their limits as survival, loyalty, and truth collide.</p>
+      <p>A deep dive into the minds of characters who will be pushed to their limits as survival, loyalty, and truth collide.</p>
     </div>
 
   </div>
@@ -123,6 +123,7 @@
   <section class="expect arctic-camo">
   <h2>Early Praise for Night Talon</h2>
   <div class="review-grid">
+    <p>Send in your review for a chance to be featured.</p>
     <!--<div class="review-card">
       <p>"A tense, atmospheric military thriller that kept me hooked."</p>
       <span>- Early Reader</span>
